fix table alignment

--- a/app/assets/styles/core/_inpages.scss
+++ b/app/assets/styles/core/_inpages.scss
@@ -10,7 +10,12 @@
   }
 
 	&__headline-actions {
-		float: right;
+    float: none;
+    margin-bottom: $global-spacing;
+    @include media(medium-up){
+      float: right;
+    }
+
     ul {
       margin: 0;
       padding: 0;
@@ -111,13 +116,13 @@
 
 		td {
 			font-size: 0.75rem;
+      position: relative;
 			font-weight: $base-font-regular;
 			padding: ($global-spacing * 2) ($global-spacing * 2) $global-spacing 0;
 
       @include media(medium-down) {
         display: block; 
         border: none;
-        position: relative;
         &:last-child {
           box-shadow: inset 0 -1px 0 0 $tertiary-color;
           margin-bottom: $global-spacing;
@@ -128,6 +133,12 @@
 				color: $base-color;
 				font-weight: $base-font-bold;
 				margin-bottom: 0;
+        position: absolute;
+        top: $global-spacing;
+        @include media(medium-down) {
+          position: relative;
+          top: 0;
+        }
 			}
 		}
 
